--- a/notebooks/pre-process_feature-selection.ipynb
+++ b/notebooks/pre-process_feature-selection.ipynb
@@ -580,30 +580,9 @@
    "source": [
     "# Exclusion of features that are not necessary\n",
     "drop_columns = [\n",
-    "    'Time',\n",
-    "    'DriverNumber',\n",
-    "    'PitOutTime',\n",
-    "    'PitInTime',\n",
-    "    'Sector1SessionTime',\n",
-    "    'Sector2SessionTime',\n",
-    "    'Sector3SessionTime',\n",
-    "    'SpeedI1',\n",
-    "    'SpeedI2',\n",
-    "    'SpeedFL',\n",
-    "    'SpeedST',\n",
-    "    'IsPersonalBest',\n",
-    "    'FreshTyre',\n",
-    "    'Team',\n",
-    "    'LapStartTime',\n",
-    "    'LapStartDate',\n",
-    "    'TrackStatus',\n",
-    "    'Deleted',\n",
-    "    'DeletedReason',\n",
-    "    'FastF1Generated',\n",
-    "    'IsAccurate',\n",
-    "    'WindDirection',\n",
-    "    'WindSpeed',\n",
-    "    'Delta_Lap'\n",
+    "    'Time', 'DriverNumber', 'PitOutTime', 'PitInTime', 'Sector1SessionTime', 'Sector2SessionTime', 'Sector3SessionTime',\n",
+    "    'SpeedI1', 'SpeedI2', 'SpeedFL', 'SpeedST', 'IsPersonalBest', 'FreshTyre', 'Team', 'LapStartTime', 'LapStartDate',\n",
+    "    'TrackStatus', 'Deleted', 'DeletedReason', 'FastF1Generated', 'IsAccurate', 'WindDirection', 'WindSpeed', 'Delta_Lap'\n",
     "]\n",
     "\n",
     "new_df = all_races_df.drop(columns=drop_columns, inplace=True)"
@@ -678,27 +657,9 @@
     }
    ],
    "source": [
-    "# drop nan in position column\n",
+    "# Drop nan in position column\n",
     "all_races_df.dropna(subset=['Position'], inplace=True)\n",
     "\n",
-    "# Display basic info\n",
-    "print(\"Dataset shape:\", all_races_df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset shape: (61366, 17)\n"
-     ]
-    }
-   ],
-   "source": [
     "# Display basic info\n",
     "print(\"Dataset shape:\", all_races_df.shape)"
    ]
@@ -719,8 +680,7 @@
    ],
    "source": [
     "# Verify duplicates\n",
-    "print(\"Number of duplicates:\")\n",
-    "print(all_races_df.duplicated().sum())"
+    "print(\"Number of duplicates:\", all_races_df.duplicated().sum())"
    ]
   },
   {
@@ -768,15 +728,8 @@
    "source": [
     "# # Checking different values in each column\n",
     "# for col in all_races:\n",
-    "#     print(all_races[col].unique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     print(all_races[col].unique())\n",
+    "\n",
     "# # ceeck different unique values in compound column\n",
     "# print(all_races['Compound'].unique())"
    ]
@@ -1407,7 +1360,7 @@
     "all_races_df['LapPct'] = all_races_df['LapNumber'] / all_races_df.groupby(['Event_Year', 'GrandPrix'])['LapNumber'].transform('max')\n",
     "\n",
     "# Display a sample\n",
-    "all_races_df[['Driver','LapNumber','LapPct','Event_Year','GrandPrix']].head()"
+    "# all_races_df[['Driver','LapNumber','LapPct','Event_Year','GrandPrix']].head()"
    ]
   },
   {
@@ -2742,7 +2695,15 @@
    "source": [
     "# # Initialize models\n",
     "# models = {\n",
-    "#     \"Random Forest\": RandomForestRegressor(random_state=42)\n",
+    "#     \"Linear Regression\": LinearRegression(),\n",
+    "#     \"Ridge\": Ridge(),\n",
+    "#     \"Lasso\": Lasso(),\n",
+    "#     \"Random Forest\": RandomForestRegressor(random_state=42),\n",
+    "#     \"Gradient Boosting\": GradientBoostingRegressor(random_state=42),\n",
+    "#     \"XGBoost\": XGBRegressor(random_state=42),\n",
+    "#     \"LightGBM\": LGBMRegressor(random_state=42),\n",
+    "#     \"SVR\": SVR(),\n",
+    "#     \"KNN\": KNeighborsRegressor()\n",
     "# }\n",
     "\n",
     "# # Compare models function\n",
