--- a/notebooks/diego_data_explore.ipynb
+++ b/notebooks/diego_data_explore.ipynb
@@ -3504,7 +3504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "f1-tire-prediction",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
