--- a/notebooks/project_F1_notebook.ipynb
+++ b/notebooks/project_F1_notebook.ipynb
@@ -2964,7 +2964,7 @@
     {
      "data": {
       "text/plain": [
-       "array([98.1065])"
+       "array([98.09357])"
       ]
      },
      "execution_count": 37,
@@ -3001,7 +3001,7 @@
    ],
    "source": [
     "import joblib\n",
-    "joblib.dump(final_pipeline, '../raw_data/model_pipeline.pkl')"
+    "joblib.dump(new_pipeline, '../raw_data/model_pipeline.pkl')"
    ]
   },
   {
@@ -3012,7 +3012,7 @@
     {
      "data": {
       "text/plain": [
-       "array([98.1065])"
+       "array([98.09357])"
       ]
      },
      "execution_count": 39,
