--- a/notebooks/pre-process_feature-selection.ipynb
+++ b/notebooks/pre-process_feature-selection.ipynb
@@ -5296,7 +5296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "f1-tire-prediction",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
