--- a/notebooks/project_F1_notebook.ipynb
+++ b/notebooks/project_F1_notebook.ipynb
@@ -1423,6 +1423,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -2964,7 +2971,7 @@
     {
      "data": {
       "text/plain": [
-       "array([98.09357])"
+       "array([98.05663])"
       ]
      },
      "execution_count": 37,
@@ -2987,42 +2994,436 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../raw_data/model_pipeline.pkl']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import joblib\n",
-    "joblib.dump(new_pipeline, '../raw_data/model_pipeline.pkl')"
+    "# import joblib\n",
+    "# joblib.dump(new_pipeline, '../raw_data/model_pipeline.pkl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_pipeline = joblib.load('../raw_data/model_pipeline.pkl')\n",
+    "# new_pipeline.predict(X_pipeline.iloc[:1,:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Race Simulation (Driver, Year, Circuit)¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Driver</th>\n",
+       "      <th>LapTime</th>\n",
+       "      <th>LapNumber</th>\n",
+       "      <th>Stint</th>\n",
+       "      <th>Sector1Time</th>\n",
+       "      <th>Sector2Time</th>\n",
+       "      <th>Sector3Time</th>\n",
+       "      <th>Compound</th>\n",
+       "      <th>TyreLife</th>\n",
+       "      <th>Position</th>\n",
+       "      <th>AirTemp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Pressure</th>\n",
+       "      <th>Rainfall</th>\n",
+       "      <th>TrackTemp</th>\n",
+       "      <th>Event_Year</th>\n",
+       "      <th>GrandPrix</th>\n",
+       "      <th>LapPct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>54846</th>\n",
+       "      <td>HAM</td>\n",
+       "      <td>70.530</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.330</td>\n",
+       "      <td>31.680</td>\n",
+       "      <td>21.520</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>933.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47.3</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.028169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54847</th>\n",
+       "      <td>HAM</td>\n",
+       "      <td>70.723</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.378</td>\n",
+       "      <td>31.936</td>\n",
+       "      <td>21.409</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>932.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>47.4</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.042254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54848</th>\n",
+       "      <td>HAM</td>\n",
+       "      <td>70.621</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.336</td>\n",
+       "      <td>31.922</td>\n",
+       "      <td>21.363</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>932.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48.1</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.056338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54849</th>\n",
+       "      <td>HAM</td>\n",
+       "      <td>70.476</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17.320</td>\n",
+       "      <td>31.679</td>\n",
+       "      <td>21.477</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>29.4</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>933.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.070423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54850</th>\n",
+       "      <td>HAM</td>\n",
+       "      <td>72.037</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>18.363</td>\n",
+       "      <td>32.206</td>\n",
+       "      <td>21.468</td>\n",
+       "      <td>MEDIUM</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>932.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.084507</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([98.09357])"
+       "      Driver  LapTime  LapNumber  Stint  Sector1Time  Sector2Time  \\\n",
+       "54846    HAM   70.530        2.0    1.0       17.330       31.680   \n",
+       "54847    HAM   70.723        3.0    1.0       17.378       31.936   \n",
+       "54848    HAM   70.621        4.0    1.0       17.336       31.922   \n",
+       "54849    HAM   70.476        5.0    1.0       17.320       31.679   \n",
+       "54850    HAM   72.037        6.0    1.0       18.363       32.206   \n",
+       "\n",
+       "       Sector3Time Compound  TyreLife  Position  AirTemp  Humidity  Pressure  \\\n",
+       "54846       21.520   MEDIUM       2.0       4.0     28.9      36.0     933.0   \n",
+       "54847       21.409   MEDIUM       3.0       4.0     29.0      36.0     932.8   \n",
+       "54848       21.363   MEDIUM       4.0       4.0     29.3      35.0     932.9   \n",
+       "54849       21.477   MEDIUM       5.0       4.0     29.4      35.0     933.0   \n",
+       "54850       21.468   MEDIUM       6.0       5.0     29.5      35.0     932.9   \n",
+       "\n",
+       "       Rainfall  TrackTemp  Event_Year      GrandPrix    LapPct  \n",
+       "54846         0       47.3        2024  Great Britain  0.028169  \n",
+       "54847         0       47.4        2024  Great Britain  0.042254  \n",
+       "54848         0       48.1        2024  Great Britain  0.056338  \n",
+       "54849         0       48.2        2024  Great Britain  0.070423  \n",
+       "54850         0       48.2        2024  Great Britain  0.084507  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_pipeline = joblib.load('../raw_data/model_pipeline.pkl')\n",
-    "new_pipeline.predict(X_pipeline.iloc[:1,:])"
+    "df = all_races_df.copy()\n",
+    "df = df[\n",
+    "    (df['Driver'] == 'HAM') &\n",
+    "    (df['Event_Year'] == 2024) &\n",
+    "    (df['GrandPrix'] == 'Great Britain')\n",
+    "]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pred = df.drop(columns=['Sector1Time', 'Sector2Time', 'Sector3Time','LapPct', 'LapTime'])\n",
+    "y_pred = df['LapTime']\n",
+    "\n",
+    "model = final_pipeline.fit(X_pred, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['PredictedLapTime'] = model.predict(X_pred)\n",
+    "result_df = df[['LapNumber', 'LapTime', 'PredictedLapTime', 'Stint']].set_index('LapNumber')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LapTime</th>\n",
+       "      <th>PredictedLapTime</th>\n",
+       "      <th>Stint</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LapNumber</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2.0</th>\n",
+       "      <td>70.530</td>\n",
+       "      <td>70.56255</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.0</th>\n",
+       "      <td>70.723</td>\n",
+       "      <td>70.75035</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.0</th>\n",
+       "      <td>70.621</td>\n",
+       "      <td>70.78393</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5.0</th>\n",
+       "      <td>70.476</td>\n",
+       "      <td>70.76705</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.0</th>\n",
+       "      <td>72.037</td>\n",
+       "      <td>71.56278</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           LapTime  PredictedLapTime  Stint\n",
+       "LapNumber                                  \n",
+       "2.0         70.530          70.56255    1.0\n",
+       "3.0         70.723          70.75035    1.0\n",
+       "4.0         70.621          70.78393    1.0\n",
+       "5.0         70.476          70.76705    1.0\n",
+       "6.0         72.037          71.56278    1.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: {'real': 70.53, 'predicted': 70.56255, 'Stint': 1},\n",
+       " 3: {'real': 70.723, 'predicted': 70.75034999999998, 'Stint': 1},\n",
+       " 4: {'real': 70.621, 'predicted': 70.78393000000001, 'Stint': 1},\n",
+       " 5: {'real': 70.476, 'predicted': 70.76704999999993, 'Stint': 1},\n",
+       " 6: {'real': 72.037, 'predicted': 71.56278, 'Stint': 1},\n",
+       " 7: {'real': 71.198, 'predicted': 71.30984000000007, 'Stint': 1},\n",
+       " 8: {'real': 71.21, 'predicted': 71.14839999999998, 'Stint': 1},\n",
+       " 9: {'real': 70.981, 'predicted': 71.07591999999991, 'Stint': 1},\n",
+       " 10: {'real': 70.997, 'predicted': 71.05789000000001, 'Stint': 1},\n",
+       " 11: {'real': 71.217, 'predicted': 71.18895999999997, 'Stint': 1},\n",
+       " 12: {'real': 71.237, 'predicted': 71.36850000000004, 'Stint': 1},\n",
+       " 13: {'real': 71.354, 'predicted': 71.49035000000002, 'Stint': 1},\n",
+       " 14: {'real': 71.499, 'predicted': 71.54252999999989, 'Stint': 1},\n",
+       " 15: {'real': 71.664, 'predicted': 71.55081999999997, 'Stint': 1},\n",
+       " 16: {'real': 71.515, 'predicted': 71.52133, 'Stint': 1},\n",
+       " 17: {'real': 71.614, 'predicted': 71.5703499999999, 'Stint': 1},\n",
+       " 18: {'real': 71.517, 'predicted': 71.5588699999999, 'Stint': 1},\n",
+       " 19: {'real': 72.152, 'predicted': 71.93673000000001, 'Stint': 1},\n",
+       " 20: {'real': 71.868, 'predicted': 71.7699800000001, 'Stint': 1},\n",
+       " 23: {'real': 70.131, 'predicted': 70.25712000000007, 'Stint': 2},\n",
+       " 24: {'real': 70.296, 'predicted': 70.27187000000005, 'Stint': 2},\n",
+       " 25: {'real': 70.257, 'predicted': 70.31059999999991, 'Stint': 2},\n",
+       " 26: {'real': 70.374, 'predicted': 70.36644999999989, 'Stint': 2},\n",
+       " 27: {'real': 70.254, 'predicted': 70.34113999999997, 'Stint': 2},\n",
+       " 28: {'real': 70.148, 'predicted': 70.39932000000005, 'Stint': 2},\n",
+       " 29: {'real': 70.171, 'predicted': 70.21465000000008, 'Stint': 2},\n",
+       " 30: {'real': 70.367, 'predicted': 70.32686000000011, 'Stint': 2},\n",
+       " 31: {'real': 70.388, 'predicted': 70.43242999999995, 'Stint': 2},\n",
+       " 32: {'real': 70.566, 'predicted': 70.48297999999994, 'Stint': 2},\n",
+       " 33: {'real': 70.211, 'predicted': 70.48280000000001, 'Stint': 2},\n",
+       " 34: {'real': 70.128, 'predicted': 70.54260999999997, 'Stint': 2},\n",
+       " 35: {'real': 70.566, 'predicted': 70.54947999999993, 'Stint': 2},\n",
+       " 36: {'real': 70.671, 'predicted': 70.63243000000001, 'Stint': 2},\n",
+       " 37: {'real': 70.479, 'predicted': 70.54917000000003, 'Stint': 2},\n",
+       " 38: {'real': 70.677, 'predicted': 70.60776999999993, 'Stint': 2},\n",
+       " 39: {'real': 70.638, 'predicted': 70.65731999999994, 'Stint': 2},\n",
+       " 40: {'real': 70.621, 'predicted': 70.83417000000004, 'Stint': 2},\n",
+       " 41: {'real': 70.997, 'predicted': 71.04816000000008, 'Stint': 2},\n",
+       " 42: {'real': 70.946, 'predicted': 70.98095999999998, 'Stint': 2},\n",
+       " 43: {'real': 70.802, 'predicted': 70.94954999999996, 'Stint': 2},\n",
+       " 44: {'real': 71.331, 'predicted': 71.20890000000004, 'Stint': 2},\n",
+       " 45: {'real': 70.877, 'predicted': 70.87915000000008, 'Stint': 2},\n",
+       " 46: {'real': 70.86, 'predicted': 70.87570999999997, 'Stint': 2},\n",
+       " 47: {'real': 71.283, 'predicted': 71.35049000000006, 'Stint': 2},\n",
+       " 48: {'real': 71.942, 'predicted': 71.60220999999997, 'Stint': 2},\n",
+       " 49: {'real': 70.919, 'predicted': 71.06123999999993, 'Stint': 2},\n",
+       " 50: {'real': 70.941, 'predicted': 71.0385099999999, 'Stint': 2},\n",
+       " 51: {'real': 71.228, 'predicted': 71.21543000000001, 'Stint': 2},\n",
+       " 52: {'real': 71.331, 'predicted': 71.26074000000006, 'Stint': 2},\n",
+       " 55: {'real': 69.963, 'predicted': 69.99628999999993, 'Stint': 3},\n",
+       " 56: {'real': 70.092, 'predicted': 70.0705599999999, 'Stint': 3},\n",
+       " 57: {'real': 70.044, 'predicted': 70.04574999999991, 'Stint': 3},\n",
+       " 58: {'real': 69.905, 'predicted': 69.91662999999994, 'Stint': 3},\n",
+       " 59: {'real': 69.792, 'predicted': 69.83882000000007, 'Stint': 3},\n",
+       " 60: {'real': 69.81, 'predicted': 69.84954000000003, 'Stint': 3},\n",
+       " 61: {'real': 69.562, 'predicted': 69.7107499999999, 'Stint': 3},\n",
+       " 62: {'real': 70.105, 'predicted': 69.95407999999986, 'Stint': 3},\n",
+       " 63: {'real': 69.637, 'predicted': 69.80694999999992, 'Stint': 3},\n",
+       " 64: {'real': 69.98, 'predicted': 70.14877999999987, 'Stint': 3},\n",
+       " 65: {'real': 74.506, 'predicted': 74.41560000000005, 'Stint': 3},\n",
+       " 66: {'real': 81.112, 'predicted': 76.96216000000003, 'Stint': 3},\n",
+       " 67: {'real': 69.592, 'predicted': 70.2273899999999, 'Stint': 3},\n",
+       " 68: {'real': 69.86, 'predicted': 70.16905999999992, 'Stint': 3},\n",
+       " 69: {'real': 70.438, 'predicted': 70.42890000000006, 'Stint': 3},\n",
+       " 70: {'real': 70.645, 'predicted': 70.5983700000001, 'Stint': 3},\n",
+       " 71: {'real': 70.413, 'predicted': 70.5066499999999, 'Stint': 3}}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_dict = {\n",
+    "    int(lap): {\n",
+    "        'real': float(row['LapTime']),\n",
+    "        'predicted': float(row['PredictedLapTime']),\n",
+    "        'Stint': int(row['Stint'])\n",
+    "    }\n",
+    "    for lap, row in result_df.iterrows()\n",
+    "}\n",
+    "result_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "break"
    ]
   }
  ],
